@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-06T01:54:27Z",
-  "count_outdated" : 216,
-  "uniques_outdated" : 73,
+  "timestamp" : "2022-11-06T16:26:55Z",
+  "count_outdated" : 217,
+  "uniques_outdated" : 74,
   "count" : 242,
   "uniques" : 87,
   "clones" : [
-    {
-      "timestamp": "2022-10-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-24T00:00:00Z",
       "count": 2,
